- Fixed some references to OctoPkg.

--- a/baiacu.desktop
+++ b/baiacu.desktop
@@ -66,10 +66,10 @@ Comment[vi]=Thêm hoặc gỡ phần mềm cài đặt trên hệ thống
 Comment[zh_CN]=添加或删除系统中安装的软件
 Comment[zh_HK]=加入或移除系統上安裝的軟件
 Comment[zh_TW]=加入或移除系統上安裝的軟體
-Exec=/usr/local/bin/octopkg
-Name[en_US]=OctoPkg
-Name=OctoPkg
-Icon=octopi
+Exec=/usr/local/bin/baiacu
+Name[en_US]=Baiacu
+Name=Baiacu
+Icon=baiacu
 MimeType=
 GenericName[en_US]=Add/Remove Software
 GenericName=Add/Remove Software
